# agent-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: admin_routes.py  agent_routes.py  model_routes.py  tool_routes.py  workflow_routes.py
app/config/: settings.py
app/core/agent/: base.py  react.py  state.py
app/core/tool/: base.py  decorator.py  registry.py
app/core/workflow/: executor.py  graph.py
app/infrastructure/: database.py  redis_client.py
app/infrastructure/models/: __init__.py  agent_definition.py  run_log.py  workflow_definition.py
app/memory/: base.py  session.py
app/model/: base.py  dashscope_client.py  openai_client.py  router.py
app/models/: agent.py  common.py  tool.py  workflow.py
app/observability/: metrics.py  tracer.py
app/tools/: __init__.py  code_executor.py  current_time.py  rag_query.py  web_search.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  main.jsx  style.css
frontend/src/pages/: AgentForm.vue  Agents.vue  Dashboard.jsx  Dashboard.vue  Logs.vue  TraceDetail.jsx  TraceDetail.vue  WorkflowBuilder.jsx  WorkflowBuilder.vue  WorkflowForm.vue  Workflows.vue
tests/: test_admin_api.py  test_agent_react.py  test_agent_state.py  test_api.py  test_builtin_tools.py  test_dashscope_client.py  test_memory.py  test_model_gateway.py  test_model_router_fallback.py  test_models.py  test_observability.py  test_tool_registry.py  test_workflow_api.py  test_workflow_executor.py  test_workflow_graph.py
